For feature extraction the --cut-zeros argument is needed, to eliminate
Mon May 15 20:23:42 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/audio/Makefile.am: For feature extraction the --cut-zeros
	argument is needed, to eliminate the extra zeros before and after the
	signal. Otherwise, feature comparision will be unreliable.
	For the balance test, I also added the --spectrum and --avg-spectrum
	features again, and renamed the reference file to balance.ref.

	* tests/audio/balance.bse: In addition to testing the left and right
	position, the test file now starts with the center position.

	* tests/audio/balance.ref: New reference file (in the new format) for
	the balance test.

svn path=/trunk/; revision=3700

--- a/slowtests/audio/Makefile.am
+++ b/slowtests/audio/Makefile.am
@@ -60,9 +60,9 @@ BSEFCOMPARE = $(top_builddir)/tools/bsefcompare
 
 balance-test:
 	$(BSE2WAV) balance.bse balance.wav
-	$(BSEFEXTRACT) balance.wav --channel 0 --avg-energy  > balance.tmp
-	$(BSEFEXTRACT) balance.wav --channel 1 --avg-energy >> balance.tmp
-	$(BSEFCOMPARE) balance.feature balance.tmp --threshold 99.99
+	$(BSEFEXTRACT) balance.wav --cut-zeros --channel 0 --avg-spectrum --spectrum --avg-energy  > balance.tmp
+	$(BSEFEXTRACT) balance.wav --cut-zeros --channel 1 --avg-spectrum --spectrum --avg-energy >> balance.tmp
+	$(BSEFCOMPARE) balance.ref balance.tmp --threshold 99.99
 
 EXTRA_DIST += $(strip		\
 	balance-left.reference	\
