added distfile-list:-rule to recursively generate a list of all DISTFILES
Mon May 15 21:21:28 2006  Tim Janik  <timj@gtk.org>

        * Makefile.decl: added distfile-list:-rule to recursively generate a
        list of all DISTFILES files.

        * tests/Makefile.am: check that no .bse file listed in DISTFILES
        produces warnings when loaded.

svn path=/trunk/; revision=3701

--- a/Makefile.decl
+++ b/Makefile.decl
@@ -16,3 +16,22 @@ EXTRA_DIST=$(GENERATED_EXTRA_DIST)
 # assign project wide defaults
 AM_CFLAGS = -D_BIRNET_SOURCE_EXTENSIONS
 AM_CXXFLAGS = -D_BIRNET_SOURCE_EXTENSIONS
+
+# === distfile-list ===
+# recursive rule supported by all Makefiles to generate a list of all
+# files listed as DISTFILES.
+.PHONY: distfile-list
+distfile-list:
+	@if test ! -f "$(DISTFILE_LIST)" ; then				\
+		echo 'distfile-list: $$(DISTFILE_LIST) is unwritable' ;	\
+		exit 1 ;						\
+	fi
+	@for subdir in $(SUBDIRS) ; do				\
+	  test "$$subdir" = '.' ||				\
+	    $(MAKE) -C "$$subdir" $(AM_MAKEFLAGS) $@ ||		\
+	    exit 1 ;						\
+	done
+	for file in $(DISTFILES) ; do				\
+	  test -e "$$file" &&					\
+	    echo "$(subdir)/$$file" >> $(DISTFILE_LIST) ;	\
+	done
