use checkproject.scm to test-load .bse files. even bail on warnings issued
Tue May 16 01:37:20 2006  Tim Janik  <timj@gtk.org>

        * slowtests/Makefile.am (bse-check): use checkproject.scm to test-load
        .bse files. even bail on warnings issued on stderr.
        issue bse-check: upon make check.

        * slowtests/checkproject.scm: new file to test-load .bse files which
        only need stock tarball plugins.

        * tests/Makefile.am: removed bse-check:-rule which is in slowtests/ now.

svn path=/trunk/; revision=3706

--- a/slowtests/Makefile.am
+++ b/slowtests/Makefile.am
@@ -9,8 +9,7 @@ DEFS += -DG_LOG_DOMAIN="\"BEAST-TEST\"" # -DG_DISABLE_CONST_RETURNS
 SFIDL = $(top_builddir)/sfi/sfidl
 SFIDL_INC = --nostdinc -I$(top_srcdir) -I$(top_builddir)
 
-#
-# rules to generate built sources
+# === rules to generate built sources ===
 #
 # bsecxxapi.hh
 GENERATED_CLEANFILES += bsecxxapi.hh
@@ -31,22 +30,60 @@ bsecxxapi.cc: bsecxxapi.hh $(top_srcdir)/bse/bse.idl $(SFIDL)
 	&& cp xgen-$(@F) $@ \
 	&& rm -f xgen-$(@F)
 
-#
+
+# === generation targets ===
 # convenience targets for generated source files
-#
 .PHONY: generated clean-generated
 clean-generated: clean
 	rm -f $(GENERATED) stamp-*
 generated: clean-generated $(GENERATED)
 
 
-#
-# test programs
-#
+# === test programs ===
 TESTS = perftest testwavechunk
 noinst_PROGRAMS = $(TESTS)
 progs_ldadd = $(top_builddir)/bse/libbse.la
+# testwavechunk
 testwavechunk_SOURCES = testwavechunk.c cxxdummy.cc
 testwavechunk_LDADD = $(progs_ldadd)
+# perftest
 perftest_SOURCES = perftest.cc bsecxxapi.cc
 perftest_LDADD = $(progs_ldadd)
+
+
+
+# === BSE file check ===
+# this test checks that all .bse files contained in the beast tarball
+# will load without any warnings or errors being issued. this is done
+# by first constructing the tarball file list via the distfile-list:-rule
+# which is specified in Makefile.decl and included in each subdir, then
+# filtering out bse files and finally trying to load these without warnings.
+DISTFILE_LIST_NAME=$(shell pwd)/distfiles.list
+distfiles.list: Makefile
+	rm -f distfiles.list
+	test ! -e distfiles.list
+	test ! -e $(DISTFILE_LIST_NAME)
+	echo > $(DISTFILE_LIST_NAME)
+	test -e distfiles.list
+	test -e $(DISTFILE_LIST_NAME)
+	cd $(top_srcdir) && make distfile-list DISTFILE_LIST=$(DISTFILE_LIST_NAME)
+.PHONY: bse-check
+bse-check: distfiles.list
+	cd $(top_srcdir) &&				\
+	for file in `grep '\.bse$$' $(subdir)/distfiles.list` ; do	\
+	  echo "Test load project: $$file" ;				\
+	  $(TOPDIR_BSESHELL) "$$file" 2>&1 | tee warnings.tmp ;		\
+	  test ! -s "warnings.tmp" || exit 1 ;				\
+	done
+	@echo "======================================="
+	@echo "All stock BSE files passed loading test"
+	@echo "======================================="
+check-am: bse-check # run bse-check *before* ordinary tests
+# check-local: bse-check # run bse-check *after* ordinary tests
+TOPDIR_BSESHELL = $(strip						\
+	./shell/bsesh-$(BIN_VERSION)					\
+	  -p null -m null						\
+	  --bse-rcfile "/dev/null" --bse-no-load			\
+	  --bse-override-plugin-globs './plugins/.libs/*.so'		\
+	  -s ./slowtests/checkproject.scm				\
+)
