--- a/slowtests/Makefile.am
+++ b/slowtests/Makefile.am
@@ -4,6 +4,8 @@
 ## GNU Lesser General Public License version 2 or any later version.
 include $(top_srcdir)/Makefile.decl
 
+SUBDIRS = audio
+
 INCLUDES += -I$(top_srcdir) -I$(top_builddir) -I$(srcdir) -I. $(SFI_CFLAGS)
 DEFS += -DG_LOG_DOMAIN="\"BEAST-TEST\"" # -DG_DISABLE_CONST_RETURNS
 SFIDL = $(top_builddir)/sfi/sfidl
