Reorder tar options so that make site-preview works with GNU tar-1.15.1,
Fri May 19 17:48:27 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* web/Makefile.am: Reorder tar options so that make site-preview works
	with GNU tar-1.15.1, too.

svn path=/trunk/; revision=3718

--- a/web/Makefile.am
+++ b/web/Makefile.am
@@ -76,7 +76,7 @@ ${HTML_TARGETS} ${RDOCU_TARGETS}: webmenu.doxi webframe.doxi ../docs/beastdefs.d
 beastweb-galleries.tar.bz2: ${TARGET_DIRS} html/screenshotdir/.md5sum html/logogallerydir/.md5sum
 	tar jcf $@ html/screenshotdir/ html/logogallerydir/
 beastweb-pages.tar.bz2: ${TARGET_DIRS} html/style/.md5sum html/web-images/.md5sum html/images/.md5sum ${PHP_TARGETS} ${HTML_TARGETS} ${RDOCU_TARGETS}
-	tar jcf $@ php/ html/ --anchored --exclude='html/screenshotdir/*' --exclude='html/logogallerydir/*'
+	tar jcf $@ --anchored --exclude='html/screenshotdir/*' --exclude='html/logogallerydir/*' php/ html/
 CLEANFILES += beastweb-galleries.tar.bz2 beastweb-pages.tar.bz2
 
 ${TARGET_DIRS}:	# rule to create directories
