fixed up --help messgae.
Sat May 20 15:34:05 2006  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstmain.c: fixed up --help messgae.

        * beast-gtk/bststest.c:
        * tools/bsefextract.cc:
        * tools/bsewavetool.cc:
        * tools/magictest.c:
        * tools/mathtool.c:
        * beast-gtk/bstmain.c: adapted to refactored BSE initialization.

        * tools/bsewavetool.cc:
        * tools/magictest.c:
        * tools/mathtool.c:
        * tools/bsefextract.cc: prevent rcfile loading.

        * configure.in: generate slowtests/filecheck/Makefile.

        * slowtests/Makefile.am: removed BSE filecheck.

        * slowtests/filecheck/Makefile.am: added BSE filecheck from slowtests/.

        * Makefile.am: echo a banner when all tests passed.

        * library/demo/partymonster.bse:
        * library/demo/x2-midi-test.bse:
        * test/midi-test.bse:
        * test/osc-test.bse: converted to 0.7.0.

svn path=/trunk/; revision=3724

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,11 +12,6 @@ AUTOMAKE_OPTIONS = 1.4
 site site-preview site-update site-update-all site-update-pages site-update-galleries:
 	@$(MAKE) -C web/ $(AM_MAKEFLAGS) $@
 
-test:
-	@$(MAKE) -C tests/ $(AM_MAKEFLAGS) $@
-
-.PHONY: test
-
 # extra dependancies
 configure: acbeast.m4 birnet/configure.inc
 
@@ -37,6 +32,13 @@ EXTRA_DIST += $(strip		\
 	intltool-merge.in       \
 	intltool-update.in	\
 )
+
+# check: message
+ALL_CHECKED_MSG = "All package tests passed"
+check: check-recursive
+	@echo $(ALL_CHECKED_MSG) | sed 's/./=/g'
+	@echo $(ALL_CHECKED_MSG)
+	@echo $(ALL_CHECKED_MSG) | sed 's/./=/g'
 
 # fixup automake-1.9.6 distuninstallcheck:-rule reporting files created by update-mime-database(1)
 filter_stale_uninstalled      = | egrep -v '^.*/share/mime/(subclasses|globs|magic|XMLnamespaces|aliases)$$'
