--- a/configure.in
+++ b/configure.in
@@ -639,6 +639,7 @@ tests/bse/Makefile
 test/Makefile
 slowtests/Makefile
 slowtests/audio/Makefile
+slowtests/filecheck/Makefile
 doxer/Makefile
 docs/Makefile
 docs/images/Makefile
