fixed up bogus non-true exit values in distfile-list: rule.
Tue May 23 00:10:47 2006  Tim Janik  <timj@gtk.org>

        * Makefile.decl: fixed up bogus non-true exit values in distfile-list: rule.

        * slowtests/filecheck/Makefile.am: srcdir != builddir fixups.

svn path=/trunk/; revision=3731

--- a/Makefile.decl
+++ b/Makefile.decl
@@ -34,4 +34,4 @@ distfile-list:
 	for file in $(DISTFILES) ; do				\
 	  test -e "$$file" &&					\
 	    echo "$(subdir)/$$file" >> $(DISTFILE_LIST) ;	\
-	done
+	done ; true
