upgrade to automake-1.9
Thu May 25 13:07:39 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* autogen.sh:
	* Makefile.am: upgrade to automake-1.9

	* bsepcmdevice-portaudio.cc: compatibility with 0.7.0.

	* configure.in: bump version to 0.7.0.

	* README:
	* NEWS: Updated.

svn path=/trunk/; revision=3735

--- a/drivers/bse-portaudio/Makefile.am
+++ b/drivers/bse-portaudio/Makefile.am
@@ -3,14 +3,12 @@
 # Copyright (C) 2004 Stefan Westerfeld
 #
 ## GNU Lesser General Public License version 2 or any later version.
-include $(top_srcdir)/Makefile.decl
 
-# require automake 1.4
-AUTOMAKE_OPTIONS = 1.4
-
-INCLUDES += -I$(srcdir) -I$(top_builddir) $(BSE_CFLAGS)
+INCLUDES = -I$(srcdir) -I$(top_builddir) $(BSE_CFLAGS)
 # we specify the logging domain here
-DEFS += $(strip -DG_LOG_DOMAIN=\"BSE-PortAudio\")
+DEFS = $(strip -DG_LOG_DOMAIN=\"BSE-PortAudio\")
+# make automake1.9 happy
+EXTRA_DIST =
 
 # extra dependancies
 configure: acbeast.m4
@@ -28,7 +26,7 @@ drivers_LTLIBRARIES = bsepcmdevice-portaudio.la
 bsepcmdevice_portaudio_la_SOURCES = bsepcmdevice-portaudio.cc
 bsepcmdevice_portaudio_la_LDFLAGS = -module $(drivers_ldflags)
 bsepcmdevice_portaudio_la_LIBADD  = $(drivers_libs) $(PORTAUDIO_LIBS)
-EXTRA_HEADERS               += bsepcmdevice-portaudio.hh
+EXTRA_DIST                       += bsepcmdevice-portaudio.hh
 
 EXTRA_DIST += $(strip		\
 	${EXTRA_HEADERS}	\
