Use locale independant g_ascii_formatd for writing the doubles now;
Thu May 25 15:24:17 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bsefextract.cc: Use locale independant g_ascii_formatd for
	writing the doubles now; increased output precision to %15.9g (which
	is in some cases a huge improvement over %f).

	* slowtests/audio/Makefile.am:
        * slowtests/audio/partymonster.ref: Test partymonster.bse, too. To do
        it right, bse would need an option to produce deterministic random
        values, but for now, with a more relaxed threshold, the test passes.

	* slowtests/audio/*.ref: New reference files in the new format.

svn path=/trunk/; revision=3737

--- a/slowtests/audio/Makefile.am
+++ b/slowtests/audio/Makefile.am
@@ -80,3 +80,13 @@ velocity-test:
 	$(BSEFEXTRACT) $(@F).wav --cut-zeros --channel 1 --avg-spectrum --spectrum --avg-energy >> $(@F).tmp
 	$(BSEFCOMPARE) $(srcdir)/velocity.ref $(@F).tmp --threshold 99.99
 	rm -f $(@F).tmp $(@F).wav
+
+# the BEAST demo song
+FEATURE_TESTS += partymonster-test
+EXTRA_DIST += partymonster.ref
+partymonster-test:
+	$(BSE2WAV) $(top_srcdir)/library/demo/partymonster.bse $(@F).wav
+	$(BSEFEXTRACT) $(@F).wav --cut-zeros --channel 0 --avg-spectrum --spectrum --avg-energy --end-time  > $(@F).tmp
+	$(BSEFEXTRACT) $(@F).wav --cut-zeros --channel 1 --avg-spectrum --spectrum --avg-energy --end-time >> $(@F).tmp
+	$(BSEFCOMPARE) $(srcdir)/partymonster.ref $(@F).tmp --threshold 99.9 # <- needs deterministic random
+	rm -f $(@F).tmp $(@F).wav 
