added TCHECK() which can be used like TASSERT() but doesn't print a mark.
Mon Jun  5 13:55:59 2006  Tim Janik  <timj@gtk.org>

        * birnettests.h: added TCHECK() which can be used like TASSERT() but
        doesn't print a mark. (silent assertion, usefull for *many* tests).

        * birnetutilsxx.hh: moved templates binary_lookup_insertion_pos(),
        binary_lookup_sibling() and binary_lookup() from bsecxxutils.hh here.

        * tests/sorting.cc: new test which tests various binary lookups.

svn path=/trunk/; revision=3751

--- a/birnet/tests/Makefile.am
+++ b/birnet/tests/Makefile.am
@@ -7,7 +7,7 @@ include $(top_srcdir)/Makefile.decl
 INCLUDES       += -I$(top_srcdir) -I$(top_builddir) -I. $(BIRNET_CFLAGS)
 DEFS	       += -DG_LOG_DOMAIN='"$(basename $(@F))"' -DPARANOID -DG_DISABLE_CONST_RETURNS
 
-TESTS 		 = ring threads infotest signal
+TESTS 		 = ring threads infotest signal sorting
 noinst_PROGRAMS  = $(TESTS)
 progs_ldadd 	 = $(top_builddir)/birnet/libbirnet.o $(BIRNET_LIBS) -lm
 ring_SOURCES	 = ring.cc
@@ -18,3 +18,5 @@ threads_SOURCES	 = threads.cc
 threads_LDADD	 = $(progs_ldadd)
 signal_SOURCES	 = signal.cc
 signal_LDADD	 = $(progs_ldadd)
+sorting_SOURCES  = sorting.cc
+sorting_LDADD	 = $(progs_ldadd)
