moved DataList implementation here from Rapicorn. this provides the API
Sun Jun 11 19:47:27 2006  Tim Janik  <timj@gtk.org>

        * birnetutilsxx.hh, birnetutilsxx.cc: moved DataList implementation here
        from Rapicorn. this provides the API types DataKey and DataListContainer.

        * tests/datalist.cc: DataList test, adapted from Rapicorn.

        * birnettests.h: made TASSERT() more verbose if TEST_VERBOSE is defined.

svn path=/trunk/; revision=3773

--- a/birnet/tests/Makefile.am
+++ b/birnet/tests/Makefile.am
@@ -7,7 +7,7 @@ include $(top_srcdir)/Makefile.decl
 INCLUDES       += -I$(top_srcdir) -I$(top_builddir) -I. $(BIRNET_CFLAGS)
 DEFS	       += -DG_LOG_DOMAIN='"$(basename $(@F))"' -DPARANOID -DG_DISABLE_CONST_RETURNS
 
-TESTS 		 = ring threads infotest signal sorting
+TESTS 		 = ring threads infotest signal sorting datalist
 noinst_PROGRAMS  = $(TESTS)
 progs_ldadd 	 = $(top_builddir)/birnet/libbirnet.o $(BIRNET_LIBS) -lm
 ring_SOURCES	 = ring.cc
@@ -20,3 +20,5 @@ signal_SOURCES	 = signal.cc
 signal_LDADD	 = $(progs_ldadd)
 sorting_SOURCES  = sorting.cc
 sorting_LDADD	 = $(progs_ldadd)
+datalist_SOURCES = datalist.cc
+datalist_LDADD	 = $(progs_ldadd)
