got rid of TEMPLATE_ERROR::* which is provided by Birnet now.
Mon Jun 12 01:09:51 2006  Tim Janik  <timj@gtk.org>

        * bsecxxutils.hh: got rid of TEMPLATE_ERROR::* which is provided
        by Birnet now.

        * bsecxxarg.hh: use Birnet::TEMPLATE_ERROR::invalid_type().

svn path=/trunk/; revision=3777

--- a/bse/tests/Makefile.am
+++ b/bse/tests/Makefile.am
@@ -12,7 +12,7 @@ DEFS += -DG_LOG_DOMAIN=\"BSE-TEST\" # -DG_DISABLE_CONST_RETURNS
 
 EXTRA_DIST += arrows.gp filter-defs.gp
 
-TESTS = blocktests testfft testcxx subnormals loophandle
+TESTS = testfft loophandle testcxx subnormals blocktests
 noinst_PROGRAMS = $(TESTS)
 progs_ldadd = $(top_builddir)/bse/libbse.la
 testfft_SOURCES = testfft.c cxxdummy.cc
