define _GNU_SOURCE for the birnet programming environment, to
Wed Jun 21 23:38:35 2006  Tim Janik  <timj@gtk.org>

        * Makefile.am: define _GNU_SOURCE for the birnet programming environment,
        to automatically get GNU extensions like dprintf(), large file, uint, ...

svn path=/trunk/; revision=3789

--- a/birnet/Makefile.am
+++ b/birnet/Makefile.am
@@ -65,6 +65,12 @@ birnetconfig.h: $(top_builddir)/config.status # Makefile
 	cd . \
 	&& echo "/* Generated data from $< (by make $@) */" 					 > xgen-$(@F) \
 	&& echo ""										>> xgen-$(@F) \
+	&& echo "/* select programming environment */"						>> xgen-$(@F) \
+	&& echo "#ifndef _GNU_SOURCE"								>> xgen-$(@F) \
+	&& echo "#define _GNU_SOURCE"								>> xgen-$(@F) \
+	&& echo "#endif"									>> xgen-$(@F) \
+	&& echo ""										>> xgen-$(@F) \
+	&& echo "/* standard C code wrappers */"						>> xgen-$(@F) \
 	&& echo "#ifdef  __cplusplus"								>> xgen-$(@F) \
 	&& echo '#define BIRNET_EXTERN_C_BEGIN()	extern "C" {'				>> xgen-$(@F) \
 	&& echo "#define BIRNET_EXTERN_C_END()		}"					>> xgen-$(@F) \
@@ -73,18 +79,21 @@ birnetconfig.h: $(top_builddir)/config.status # Makefile
 	&& echo "#define BIRNET_EXTERN_C_END()"							>> xgen-$(@F) \
 	&& echo "#endif"									>> xgen-$(@F) \
 	&& echo ""										>> xgen-$(@F) \
+	&& echo "/* birnet version */"								>> xgen-$(@F) \
 	&& echo "#define BIRNET_MAJOR_VERSION		(@BIRNET_MAJOR_VERSION@)"		>> xgen-$(@F) \
 	&& echo "#define BIRNET_MINOR_VERSION		(@BIRNET_MINOR_VERSION@)"		>> xgen-$(@F) \
 	&& echo "#define BIRNET_MICRO_VERSION		(@BIRNET_MICRO_VERSION@)"		>> xgen-$(@F) \
 	&& echo "#define BIRNET_BINARY_AGE		(@BIRNET_BINARY_AGE@)"			>> xgen-$(@F) \
 	&& echo "#define BIRNET_INTERFACE_AGE		(@BIRNET_INTERFACE_AGE@)"		>> xgen-$(@F) \
 	&& echo ""										>> xgen-$(@F) \
+	&& echo "/* version checks */"								>> xgen-$(@F) \
 	&& echo "#define BIRNET_CHECK_VERSION(major,minor,micro)	\\"			>> xgen-$(@F) \
 	&& echo "  (BIRNET_MAJOR_VERSION > (major) || \\"					>> xgen-$(@F) \
 	&& echo "   (BIRNET_MAJOR_VERSION == (major) && BIRNET_MINOR_VERSION > (minor)) || \\"	>> xgen-$(@F) \
 	&& echo "   (BIRNET_MAJOR_VERSION == (major) && BIRNET_MINOR_VERSION == (minor) && \\"	>> xgen-$(@F) \
 	&& echo "    BIRNET_MICRO_VERSION >= (micro)))"						>> xgen-$(@F) \
 	&& echo ""										>> xgen-$(@F) \
+	&& echo "/* configure results */"							>> xgen-$(@F) \
 	&& echo "#define BIRNET_SIZEOF_SYS_TYPESH_UINT	(@BIRNET_SIZEOF_SYS_TYPESH_UINT@)"	>> xgen-$(@F) \
 	&& echo "#define BIRNET_SIZEOF_PTH_MUTEX_T	(@BIRNET_SIZEOF_PTH_MUTEX_T@)" 		>> xgen-$(@F) \
 	&& echo "#define BIRNET_SIZEOF_PTH_COND_T	(@BIRNET_SIZEOF_PTH_COND_T@)" 		>> xgen-$(@F) \
