moved birnet_file_check() and birnet_file_equals() from beast/sfi/ here.
Fri Jul  7 01:51:35 2006  Tim Janik  <timj@gtk.org>

        * birnetutils.[hc]: moved birnet_file_check() and birnet_file_equals()
        from beast/sfi/ here. fixed socket file type test.

        * tests/infotest.cc: added test for file type checks.

        * tests/Makefile.am:
        * Makefile.am: removed bogus $LIBZ which should be part of $BIRNET_LIBS.

        * configure.inc: check for zlib.h and -lz and provide $LIBZ as part
        of $BIRNET_LIBS

svn path=/trunk/; revision=3805

--- a/birnet/tests/Makefile.am
+++ b/birnet/tests/Makefile.am
@@ -9,7 +9,7 @@ DEFS	       += -DG_LOG_DOMAIN='"$(basename $(@F))"' -DPARANOID -DG_DISABLE_CONST
 
 TESTS 		 = ring infotest signal sorting datalist threads
 noinst_PROGRAMS  = $(TESTS)
-progs_ldadd 	 = $(top_builddir)/birnet/libbirnet.o $(BIRNET_LIBS) $(LIBZ) -lm
+progs_ldadd 	 = $(top_builddir)/birnet/libbirnet.o $(BIRNET_LIBS) -lm
 ring_SOURCES	 = ring.cc
 ring_LDADD	 = $(progs_ldadd)
 infotest_SOURCES = infotest.cc
