--- a/birnet/Makefile.am
+++ b/birnet/Makefile.am
@@ -120,7 +120,7 @@ birnetsignalvariants.hh: $(srcdir)/birnetsignalslot.hh $(srcdir)/birnetsignaltem
 CLEANFILES += xgen-sigs birnetsignalvariants.hh xgen-signals.sed
 
 noinst_PROGRAMS = birnet-zintern
-progs_ldadd     = $(top_builddir)/birnet/libbirnet.o $(BIRNET_LIBS) $(LIBZ) -lm
+progs_ldadd     = $(top_builddir)/birnet/libbirnet.o $(BIRNET_LIBS) -lm
 progs_deps      = $(top_builddir)/birnet/libbirnet.o
 birnet_zintern_SOURCES = birnet-zintern.c dummy.cc
 birnet_zintern_LDADD   = $(progs_ldadd)
